--- a/SMUS/SMUS.csproj
+++ b/SMUS/SMUS.csproj
@@ -62,11 +62,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MetaData.cs" />
+    <Compile Include="Module\DragWindow.cs" />
+    <Compile Include="Module\Module.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
-    <Compile Include="SongList.cs" />
+    <Compile Include="Module\SongList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -74,7 +75,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>copy "$(SolutionDir)\lib\SFML.Net-2.1\extlibs\*.dll" "$(TargetDir)"</PreBuildEvent>
+    <PreBuildEvent>copy "$(SolutionDir)\lib\SFML.Net-2.1\extlibs\*.dll" "$(TargetDir)"
+xcopy "$(SolutionDir)Resources" "$(TargetDir)Resources\" /s /e /h /y</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
