pause/play button and more.

--- a/SMUS/SMUS.csproj
+++ b/SMUS/SMUS.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Module\DragWindow.cs" />
     <Compile Include="Module\Locks.cs" />
     <Compile Include="Module\Module.cs" />
+    <Compile Include="Module\PlayButton.cs" />
     <Compile Include="Module\ProgressBar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
