--- a/SMUS/SMUS.csproj
+++ b/SMUS/SMUS.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Audio.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Module\Border.cs" />
     <Compile Include="Module\DragWindow.cs" />
     <Compile Include="Module\Module.cs" />
