--- a/SMUS/SMUS.csproj
+++ b/SMUS/SMUS.csproj
@@ -71,10 +71,13 @@
     <Compile Include="Audio.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Module\Border.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="Module\DragWindow.cs" />
     <Compile Include="Module\Module.cs" />
     <Compile Include="Module\PlayButton.cs" />
     <Compile Include="Module\ProgressBar.cs" />
+    <Compile Include="Module\ShuffleButton.cs" />
+    <Compile Include="Module\VolumeControl.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
