--- a/SMUS/SMUS.csproj
+++ b/SMUS/SMUS.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
     <Compile Include="Module\SongList.cs" />
+    <Compile Include="WINKeyboard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
